# candle-lora

./: .gitignore  .typos.toml  Cargo.toml  README.md  crates.js  help.html  index.html  search-index.js  settings.html  src-files.js
.github/: CONTRIBUTING.md  PULL_REQUEST_TEMPLATE.md
.github/workflows/: cd.yml  ci.yml  docs.yml
candle-lora/: Cargo.toml
candle-lora-examples/: Cargo.toml
candle-lora-examples/examples/: linear_macro.rs  macro_diff.txt
candle-lora-macro/: Cargo.toml  README.md
candle-lora-macro/examples/: embed.rs  linear.rs
candle-lora-macro/src/: lib.rs
candle-lora-macro/tests/: linear.rs  option_linear.rs
candle-lora-transformers/: Cargo.toml
candle-lora-transformers/examples/: bert.rs  bigcode.rs  blip.rs  dinov2.rs  falcon.rs  llama.rs  mistral.rs  mpt.rs  resnet.rs  stable_lm.rs  t5.rs
candle-lora-transformers/src/: bert.rs  bigcode.rs  blip.rs  blip_text.rs  dinov2.rs  falcon.rs  lib.rs  llama.rs  mistral.rs  mpt.rs  resnet.rs  stable_lm.rs  t5.rs  unsync_func.rs  varbuilder_utils.rs  with_tracing.rs
candle-lora/src/: frozenconv.rs  frozenembed.rs  frozenlinear.rs  lib.rs  loraconv1d.rs  loraconv2d.rs  loraembed.rs  loralinear.rs
candle-lora/tests/: conv1d.rs  conv1d_merged.rs  conv2d.rs  conv2d_merged.rs  embed.rs  embed_merged.rs  linear.rs  linear_merged.rs
candle_lora/: all.html  enum.MergeError.html  index.html  sidebar-items.js  struct.Lora.html  struct.LoraConfig.html  struct.LoraConv1d.html  struct.LoraConv1dConfig.html  struct.LoraConv2d.html  struct.LoraConv2dConfig.html  struct.LoraEmbedding.html  struct.LoraEmbeddingConfig.html  struct.LoraLinear.html  struct.LoraLinearConfig.html  struct.NewLayers.html  struct.SelectedLayers.html  struct.SelectedLayersBuilder.html  trait.Conv1dLayerLike.html  trait.Conv2dLayerLike.html  trait.EmbeddingLayerLike.html  trait.LinearLayerLike.html  trait.Merge.html  trait.Saveable.html  type.MergeErrorOrError.html
candle_lora/loraconv1d/: struct.LoraConv1d.html  struct.LoraConv1dConfig.html
candle_lora/loraconv2d/: struct.LoraConv2d.html  struct.LoraConv2dConfig.html
candle_lora/loraembed/: struct.LoraEmbedding.html  struct.LoraEmbeddingConfig.html
candle_lora/loralinear/: struct.LoraLinear.html  struct.LoraLinearConfig.html
candle_lora_macro/: all.html  attr.replace_layer_fields.html  derive.AutoLoraConvert.html  index.html  sidebar-items.js
candle_lora_transformers/: all.html  index.html  sidebar-items.js
candle_lora_transformers/bert/: constant.DTYPE.html  index.html  sidebar-items.js  struct.BertLinear.html  struct.BertModel.html  struct.Config.html  struct.LayerNorm.html
candle_lora_transformers/bigcode/: index.html  sidebar-items.js  struct.Config.html  struct.GPTBigCode.html
candle_lora_transformers/blip/: index.html  sidebar-items.js  struct.BlipForConditionalGeneration.html  struct.Config.html  struct.VisionConfig.html  struct.VisionModel.html
candle_lora_transformers/blip_text/: index.html  sidebar-items.js  struct.Config.html  struct.TextLMHeadModel.html  struct.TextPooler.html
candle_lora_transformers/dinov2/: fn.vit_small.html  index.html  sidebar-items.js  struct.DinoVisionTransformer.html
candle_lora_transformers/falcon/: index.html  sidebar-items.js  struct.Config.html  struct.Falcon.html
candle_lora_transformers/llama/: constant.MAX_SEQ_LEN.html  index.html  sidebar-items.js  struct.Cache.html  struct.Config.html  struct.Llama.html  struct.LlamaConfig.html  struct.LlamaLinear.html
candle_lora_transformers/mistral/: index.html  sidebar-items.js  struct.Config.html  struct.Mistral.html
candle_lora_transformers/mpt/: index.html  sidebar-items.js  struct.Config.html  struct.Model.html
candle_lora_transformers/resnet/: fn.resnet101.html  fn.resnet101_no_final_layer.html  fn.resnet152.html  fn.resnet152_no_final_layer.html  fn.resnet18.html  fn.resnet18_no_final_layer.html  fn.resnet34.html  fn.resnet34_no_final_layer.html  fn.resnet50.html  fn.resnet50_no_final_layer.html  index.html  sidebar-items.js
candle_lora_transformers/stable_lm/: index.html  struct.Config.html  struct.Model.html
candle_lora_transformers/t5/: index.html  sidebar-items.js  struct.Config.html  struct.T5EncoderModel.html  struct.T5ForConditionalGeneration.html
candle_lora_transformers/unsync_func/: fn.func.html  index.html  sidebar-items.js  struct.UnsyncFunc.html
candle_lora_transformers/varbuilder_utils/: fn.from_mmaped_safetensors.html  fn.from_npz_tensors.html  fn.from_pth_tensors.html  index.html  sidebar-items.js
candle_lora_transformers/with_tracing/: fn.conv2d.html  fn.linear.html  fn.linear_no_bias.html  index.html  sidebar-items.js  struct.QMatMul.html  struct.TracedLoraConv2d.html  struct.TracedLoraEmbedding.html  struct.TracedLoraLConv2d.html  struct.TracedLoraLinear.html
examples/: linear.rs  linear_macro.rs  macro_diff.txt
examples/llama/: llmdataset.rs  main.rs  model.rs  training.rs  weights.rs
implementors/candle_core/: trait.Module.js
implementors/candle_lora/: trait.LinearLayerLike.js  trait.Merge.js
search.desc/candle_lora/: candle_lora-desc-0-.js
search.desc/candle_lora_macro/: candle_lora_macro-desc-0-.js
search.desc/candle_lora_transformers/: candle_lora_transformers-desc-0-.js
src/: frozenconv.rs  frozenembed.rs  frozenlinear.rs  layers.rs  lib.rs  loraconv1d.rs  loraconv2d.rs  loraembed.rs  loralinear.rs  main.rs  nontrainlinear.rs
src/candle_lora/: frozenconv.rs.html  frozenembed.rs.html  frozenlinear.rs.html  lib.rs.html  loraconv1d.rs.html  loraconv2d.rs.html  loraembed.rs.html  loralinear.rs.html
src/candle_lora_macro/: lib.rs.html
src/candle_lora_transformers/: bert.rs.html  bigcode.rs.html  blip.rs.html  blip_text.rs.html  dinov2.rs.html  falcon.rs.html  lib.rs.html  llama.rs.html  mistral.rs.html  mpt.rs.html  resnet.rs.html  stable_lm.rs.html  t5.rs.html  unsync_func.rs.html  varbuilder_utils.rs.html  with_tracing.rs.html
tests/: conv1d.rs  conv1d_merged.rs  conv2d.rs  conv2d_merged.rs  embed.rs  embed_merged.rs  linear.rs  linear_merged.rs  single_linear.rs
trait.impl/candle_core/: trait.Module.js
(+34 files in other folders)
