[workspace]
members = [
    "candle-lora",
    "candle-lora-transformers",
    "candle-lora-examples"
]
resolver = "2"

[workspace.package]
version = "0.2.0"
edition = "2021"
description = "LoRA implemented for Candle."
homepage = "https://github.com/EricLBuehler/candle-lora"
repository = "https://github.com/EricLBuehler/candle-lora"
keywords = ["machine-learning"] #TODOs: Add candle keyword
categories = ["science"]
license = "MIT OR Apache-2.0"

[workspace.dependencies]
candle-lora-macro = { git = "https://github.com/EricLBuehler/candle-lora-macro.git", version = "0.2.0" }
either = "1.9.0"
serde_json = "1.0.107"
thiserror = "1.0.48"
tracing-chrome = "0.7.1"
tracing-subscriber = "0.3.17"
trc = "1.2.3"

[profile.release-with-debug]
inherits = "release"
debug = true
