[workspace]
members = [
    "candle-lora",
    "candle-lora-transformers",
    "candle-lora-examples"
]
resolver = "2"

[workspace.package]
version = "0.2.0"
edition = "2021"
description = "LoRA implemented for Candle."
homepage = "https://github.com/EricLBuehler/candle-lora"
repository = "https://github.com/EricLBuehler/candle-lora"
keywords = ["machine-learning"] #TODOs: Add candle keyword
categories = ["science"]
license = "MIT OR Apache-2.0"

[workspace.dependencies]
candle-core = { git = "https://github.com/huggingface/candle.git", version = "0.8.4" }
candle-examples = { git = "https://github.com/huggingface/candle.git", version = "0.8.4" }
candle-nn = { git = "https://github.com/huggingface/candle.git", version = "0.8.4" }
either = "1.9.0"
serde_json = "1.0.107"
thiserror = "2.0.12"
tracing-chrome = "0.7.1"
tracing-subscriber = "0.3.17"
trc = "1.2.3"
accelerate-src = { version = "0.3.2" }
intel-mkl-src = { version = "0.8.1", features = ["mkl-static-lp64-iomp"] }
cudarc = { version = "0.13.9", features = ["f16"] }
half = { version = "2.3.1", features = ["num-traits", "use-intrinsics", "rand_distr"] }
image = { version = "0.25.6", default-features = false, features = ["jpeg", "png"] }
imageproc = { version = "0.25.0", default-features = false }

[profile.release-with-debug]
inherits = "release"
debug = true
