[package]
name = "candle-lora-examples"
version = "0.2.0"
edition = "2021"
license = "MIT"
readme = "README.md"
authors = ["Eric Buehler"]
description = "Examples of candle-lora."
homepage = "https://github.com/EricLBuehler/candle-lora"
repository = "https://github.com/EricLBuehler/candle-lora"
keywords = ["machine-learning"] #TODOs: Add candle keyword
categories = ["science"]

[dependencies]
candle-core = { git = "https://github.com/huggingface/candle.git", version = "0.3.0" }
candle-lora = { version = "0.2.0", path = "../candle-lora" }
candle-lora-macro.workspace = true
candle-nn = { git = "https://github.com/huggingface/candle.git", version = "0.3.0" }
either.workspace = true
thiserror.workspace = true
trc.workspace = true
