[package]
name = "candle-lora-examples"
readme = "README.md"
authors = ["Eric Buehler"]
version.workspace = true
edition.workspace = true
description.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true
license.workspace = true
homepage.workspace = true

[dependencies]
candle-core.workspace = true
candle-lora = { version = "0.2.0", path = "../candle-lora" }
candle-lora-macro = { version = "0.2.0", path = "../candle-lora-macro" }
candle-nn.workspace = true
either.workspace = true
thiserror.workspace = true
trc.workspace = true
