[package]
name = "candle-lora-macro"
readme = "README.md"
authors = ["Eric Buehler"]
version.workspace = true
edition.workspace = true
description = "Macros for a more ergonomic candle-lora."
repository.workspace = true
keywords.workspace = true
categories.workspace = true
license.workspace = true
homepage.workspace = true

[dependencies]
proc-macro2 = "1.0.66"
quote_into = "0.2.0"
syn = { version = "2.0.32", features = ["full", "extra-traits"] }
candle-lora = { path = "../candle-lora", package = "candle-lora", version = "0.2.0" }
candle-core = { git = "https://github.com/huggingface/candle.git", version = "0.8.4" }
candle-nn = { git = "https://github.com/huggingface/candle.git", version = "0.8.4" }
quote = "1.0.33"

[lib]
proc-macro = true
