[package]
name = "candle-lora-transformers"
readme = "README.md"
authors = ["Eric Buehler"]
version.workspace = true
edition.workspace = true
description.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true
license.workspace = true
homepage.workspace = true

[dependencies]
anyhow = "1.0.75"
candle-core.workspace = true
candle-examples.workspace = true
candle-lora = { version = "0.2.0", path = "../candle-lora" }
candle-lora-macro = { version = "0.2.0", path = "../candle-lora-macro" }
candle-nn.workspace = true
candle-transformers = { git = "https://github.com/huggingface/candle.git", version = "0.8.4" }
candle-flash-attn = { git = "https://github.com/huggingface/candle.git", version = "0.8.4", optional = true }
clap = { version = "4.4.7", features = ["derive"] }
hf-hub = "0.4.2"
serde = "1.0.189"
serde_json.workspace = true
tokenizers = "0.21.1"
tracing = "0.1.40"
tracing-chrome = "0.7.1"
tracing-subscriber = "0.3.17"
accelerate-src = { workspace = true, optional = true }
intel-mkl-src = { workspace = true, optional = true }
cudarc = { workspace = true, optional = true }
half = { workspace = true, optional = true }
trc.workspace = true
image.workspace = true
tqdm = "0.7.0"

[features]
default = []
metal = ["candle-core/metal", "candle-nn/metal", "candle-transformers/metal"]
accelerate = ["dep:accelerate-src", "candle-core/accelerate", "candle-nn/accelerate", "candle-transformers/accelerate"]
cuda = ["candle-core/cuda", "candle-nn/cuda", "candle-transformers/cuda"]
cudnn = ["candle-core/cudnn"]
flash-attn = ["cuda", "candle-transformers/flash-attn", "dep:candle-flash-attn"]
mkl = ["dep:intel-mkl-src", "candle-core/mkl", "candle-nn/mkl", "candle-transformers/mkl"]
nccl = ["cuda", "cudarc/nccl", "dep:half"]
